# ruserwation

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
etc/services/: ruserwation.service
migrations/: 0001_schema.sql
mock_derive/: Cargo.toml
mock_derive/src/: lib.rs
mock_derive/tests/: mock_derive.rs  mock_util.rs
mock_util/: Cargo.toml
mock_util/src/: lib.rs
mock_util/tests/: mock_util.rs  mocks.rs
mocks/: Cargo.toml
mocks/src/: lib.rs
mocks/tests/: argument_captor.rs  argument_value.rs  mocks.rs
src/: lib.rs  main.rs  models.rs
src/admin/: auth.rs  errors.rs  helper.rs  login.rs  logout.rs  mod.rs  models.rs  repo.rs  sessions.rs  sqlite.rs
src/app/: enums.rs  models.rs
src/common/: mod.rs
src/config/: context.rs  mod.rs  models.rs
src/customer/: models.rs
src/db/: mod.rs  sqlite.rs
src/reservation/: helper.rs  mod.rs  models.rs  repo.rs  reserve.rs  sqlite.rs
src/response/: mod.rs
src/restaurant/: index.rs  models.rs
src/setup/: errors.rs  init.rs  mod.rs  startup.rs
src/utils/: env_util.rs  html_util.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
test_utils/tests/: mocks.rs
tests/: admin.rs  admin_login.rs  admin_logout.rs  admin_repo.rs  auth.rs  db_sqlite.rs  helper.rs  index.rs  it_admin_login.rs  reservation.rs  reservation_query.rs  reservation_repo.rs  reservation_request.rs  reserve.rs  response.rs  sessions.rs  startup.rs
tests/common/: db_utils.rs  mod.rs
tests/fake/: admin_repo.rs  mod.rs  sessions.rs
tests/mock/: mod.rs  repos.rs  sessions.rs
