[package]
name = "ruserwation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
maud = { version = "0.26.0", features = ["warp"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
warp = "0.3.7"
warp-sessions = "1.0.19"

[dev-dependencies]
tokio-test = "0.4.4"
